--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,36 +279,33 @@ jobs:
         echo "Parsed type: $type"
         echo "Parsed version: $ver"
 
-    - name: Build in RHEL-based systems
+    - name: Setup and Build in RHEL-based systems
       if: matrix.config.use_composite
-      shell: bash
-      run: |
-        docker run --rm \
-          -v ${{ github.workspace }}:/workspace \
-          -w /workspace \
-          ${{ matrix.config.container }} \
-          bash -c '
-            set -ex
+      uses: docker://quay.io/${{ matrix.config.container }}
+      with:
+        args: |
+          bash -c "
+            set -ex;
             if command -v yum &> /dev/null; then
-              yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file
+              yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
             else
-              dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file
-            fi
-            gcc --version
-            if [ "${{ steps.parse.outputs.TYPE }}" = "nginx" ]; then
-              wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-              tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-              cd nginx-${{ steps.parse.outputs.VERSION }}
+              dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+            fi;
+            gcc --version;
+            cd /github/workspace;
+            if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
+              wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              cd nginx-${{ steps.parse.outputs.VERSION }};
             else
-              wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-              tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-              cd freenginx-${{ steps.parse.outputs.VERSION }}
-            fi
-            ./configure --with-compat --add-dynamic-module=..
-            make modules
-            ls -l objs/*.so
-            file objs/*.so
-          '
+              wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              cd freenginx-${{ steps.parse.outputs.VERSION }};
+            fi;
+            ./configure --with-compat --add-dynamic-module=../;
+            make modules;
+            ls -l objs/*.so;
+            file objs/*.so;"
 
     - name: Download and Extract
       id: download
@@ -352,266 +349,7 @@ jobs:
           ${{!matrix.config.use_composite && steps.download.outputs.BUILD_DIR || 'nginx-'}}${{ steps.parse.outputs.VERSION }}/objs/*.so
           ${{!matrix.config.use_composite && steps.download.outputs.BUILD_DIR || 'nginx-'}}${{ steps.parse.outputs.VERSION }}/objs/*.a
         if-no-files-found: error
-      fail-fast: false
-
-    runs-on: 'ubuntu-latest'
-    container: ${{ !matrix.config.use_composite && matrix.config.container || '' }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Install build dependencies (Debian/Ubuntu)
-      if: contains(matrix.config.container, 'ubuntu') || contains(matrix.config.container, 'debian')
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        apt-get update
-        apt-get install -y build-essential libpcre3-dev zlib1g-dev libssl-dev wget file
-        gcc --version
-
-    - name: Install build dependencies (Fedora)
-      if: contains(matrix.config.container, 'fedora')
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file
-        gcc --version
-
-    - name: Setup RHEL-based environment
-      if: matrix.config.use_composite
-      uses: docker://quay.io/${{ matrix.config.container }}
-      with:
-        args: |
-          bash -c "
-            set -ex;
-            if command -v yum &> /dev/null; then
-              yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-            else
-              dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-            fi;
-            gcc --version;
-            cd /github/workspace;
-            if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
-              wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-              tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-              cd nginx-${{ steps.parse.outputs.VERSION }};
-            else
-              wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-              tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-              cd freenginx-${{ steps.parse.outputs.VERSION }};
-            fi;
-            ./configure --with-compat --add-dynamic-module=../;
-            make modules;
-            ls -l objs/*.so;
-            file objs/*.so;"
-
-    - name: Parse version info
-      id: parse
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        version="${{ matrix.config.version }}"
-        type=$(echo "$version" | cut -d'-' -f1)
-        ver=$(echo "$version" | cut -d'-' -f2)
-        echo "TYPE=$type" >> "$GITHUB_OUTPUT"
-        echo "VERSION=$ver" >> "$GITHUB_OUTPUT"
-        echo "Parsed type: $type"
-        echo "Parsed version: $ver"
-
-    - name: Download and Extract
-      id: download
-      if: "!matrix.config.use_composite"
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        if [ "${{ steps.parse.outputs.TYPE }}" = "nginx" ]; then
-          wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          BUILD_DIR="nginx-${{ steps.parse.outputs.VERSION }}"
-        else
-          wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          BUILD_DIR="freenginx-${{ steps.parse.outputs.VERSION }}"
-        fi
-        echo "BUILD_DIR=$BUILD_DIR" >> "$GITHUB_OUTPUT"
-        echo "Directory contents:"
-        ls -la
-
-    - name: Build Module
-      if: "!matrix.config.use_composite"
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        cd "${{ steps.download.outputs.BUILD_DIR }}"
-        echo "Current directory: $(pwd)"
-        echo "Running configure..."
-        ./configure --with-compat --add-dynamic-module=../
-        echo "Running make..."
-        make modules
-        echo "Build complete. Checking module:"
-        ls -l objs/ngx_http_upstream_mgmt_module.so
-        file objs/ngx_http_upstream_mgmt_module.so
-
-    - name: Upload Build Artifacts (Container)
-      if: "!matrix.config.use_composite"
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.config.version }}-${{ matrix.config.os }}-modules
-        path: |
-          ${{ steps.download.outputs.BUILD_DIR }}/objs/*.so
-          ${{ steps.download.outputs.BUILD_DIR }}/objs/*.a
-        if-no-files-found: error
-
-    - name: Upload Build Artifacts (Composite)
-      if: matrix.config.use_composite
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.config.version }}-${{ matrix.config.os }}-modules
-        path: |
-          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.so
-          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.a
-        if-no-files-found: error
-
-    runs-on: ${{ matrix.use_composite && 'ubuntu-20.04' || 'ubuntu-latest' }}
-    container: ${{ !matrix.use_composite && matrix.container || '' }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Install build dependencies (Debian/Ubuntu)
-      if: contains(matrix.container, 'ubuntu') || contains(matrix.container, 'debian')
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        apt-get update
-        apt-get install -y build-essential libpcre3-dev zlib1g-dev libssl-dev wget file
-        gcc --version
-
-    - name: Install build dependencies (Fedora)
-      if: contains(matrix.container, 'fedora')
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file
-        gcc --version
-
-    - name: Setup RHEL-based environment
-      if: matrix.use_composite
-      uses: docker://quay.io/${{ matrix.container }}
-      with:
-        args: >
-          bash -c "
-          if command -v yum &> /dev/null; then
-            yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          else
-            dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          fi;
-          gcc --version;
-          cd /github/workspace;
-          if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
-            wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd nginx-${{ steps.parse.outputs.VERSION }};
-          else
-            wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd freenginx-${{ steps.parse.outputs.VERSION }};
-          fi;
-          ./configure --with-compat --add-dynamic-module=../;
-          make modules;
-          ls -l objs/*.so;
-          file objs/*.so;
-          "
-          bash -c "
-          if command -v yum &> /dev/null; then
-            yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          else
-            dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          fi;
-          gcc --version;
-          cd /github/workspace;
-          if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
-            wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd nginx-${{ steps.parse.outputs.VERSION }};
-          else
-            wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd freenginx-${{ steps.parse.outputs.VERSION }};
-          fi;
-          ./configure --with-compat --add-dynamic-module=../;
-          make modules;
-          ls -l objs/*.so;
-          file objs/*.so;
-          "
-
-    - name: Parse version info
-      id: parse
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        version="${{ matrix.version }}"
-        type=$(echo "$version" | cut -d'-' -f1)
-        ver=$(echo "$version" | cut -d'-' -f2)
-        echo "TYPE=$type" >> "$GITHUB_OUTPUT"
-        echo "VERSION=$ver" >> "$GITHUB_OUTPUT"
-        echo "Parsed type: $type"
-        echo "Parsed version: $ver"
-
-    - name: Download and Extract
-      id: download
-      if: "!matrix.use_composite"
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        if [ "${{ steps.parse.outputs.TYPE }}" = "nginx" ]; then
-          wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          BUILD_DIR="nginx-${{ steps.parse.outputs.VERSION }}"
-        else
-          wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz
-          BUILD_DIR="freenginx-${{ steps.parse.outputs.VERSION }}"
-        fi
-        echo "BUILD_DIR=$BUILD_DIR" >> "$GITHUB_OUTPUT"
-        echo "Directory contents:"
-        ls -la
-
-    - name: Build Module
-      if: "!matrix.use_composite"
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        cd "${{ steps.download.outputs.BUILD_DIR }}"
-        echo "Current directory: $(pwd)"
-        echo "Running configure..."
-        ./configure --with-compat --add-dynamic-module=../
-        echo "Running make..."
-        make modules
-        echo "Build complete. Checking module:"
-        ls -l objs/ngx_http_upstream_mgmt_module.so
-        file objs/ngx_http_upstream_mgmt_module.so
-
-    - name: Upload Build Artifacts (Container)
-      if: "!matrix.use_composite"
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.version }}-${{ matrix.os }}-modules
-        path: |
-          ${{ steps.download.outputs.BUILD_DIR }}/objs/*.so
-          ${{ steps.download.outputs.BUILD_DIR }}/objs/*.a
-        if-no-files-found: error
-
-    - name: Upload Build Artifacts (Composite)
-      if: matrix.use_composite
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ matrix.version }}-${{ matrix.os }}-modules
-        path: |
-          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.so
-          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.a
-        if-no-files-found: error
-
+    
   security:
     runs-on: ubuntu-latest
     permissions:
