--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,10 +245,9 @@ jobs:
     - name: Get version from check-versions
       id: get-version
       run: |
-        # Debug the matrix output
         echo "Matrix output: ${{ needs.check-versions.outputs.matrix }}"
-        # Extract first version without jq dependency
-        FIRST_VERSION=$(echo '${{ needs.check-versions.outputs.matrix }}' | sed 's/[][]//g' | cut -d'"' -f2)
+        # Clean and extract the first version string
+        FIRST_VERSION=$(echo '${{ needs.check-versions.outputs.matrix }}' | tr -d '[]"' | cut -d',' -f1)
         echo "First version: $FIRST_VERSION"
         echo "VERSION=$FIRST_VERSION" >> $GITHUB_OUTPUT
 
@@ -298,13 +297,16 @@ jobs:
           bash -c '
             set -ex
             
-            # Fix repos for CentOS 7
-            if [ -f /etc/centos-release ]; then
+            # Detect OS and setup repositories
+            if [ -f /etc/rocky-release ]; then
+              dnf install -y dnf-plugins-core
+              dnf config-manager --set-enabled powertools
+            elif [ -f /etc/centos-release ]; then
               sed -i "s/mirrorlist/#mirrorlist/g" /etc/yum.repos.d/CentOS-*
               sed -i "s|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g" /etc/yum.repos.d/CentOS-*
             fi
             
-            # Install dependencies
+            # Install dependencies based on package manager
             if command -v yum &> /dev/null; then
               yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file
             else
@@ -313,6 +315,8 @@ jobs:
             
             TYPE="${{ steps.parse.outputs.TYPE }}"
             VERSION="${{ steps.parse.outputs.VERSION }}"
+            # Clean up version string (remove any spaces or commas)
+            VERSION=$(echo "$VERSION" | tr -d " ," | tr -d "\n")
             echo "Building for type: $TYPE version: $VERSION"
             
             if [ "$TYPE" = "nginx" ]; then
