--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -335,30 +335,48 @@ jobs:
             file objs/*.so'
 
     - name: Download and Extract
+      id: download    # Add this line to create a step ID
       if: "!matrix.config.use_composite"
       shell: bash
       run: |
-        set -x  # Enable debug output
         TYPE="${{ steps.parse.outputs.TYPE }}"
         VERSION="${{ steps.parse.outputs.VERSION }}"
+        if [ -z "$TYPE" ] || [ -z "$VERSION" ]; then
+          echo "Error: Missing type or version"
+          echo "TYPE: '$TYPE'"
+          echo "VERSION: '$VERSION'"
+          exit 1
+        fi
         echo "Building for type: $TYPE version: $VERSION"
+        BUILD_DIR="${TYPE}-${VERSION}"
+        echo "BUILD_DIR=$BUILD_DIR" >> "$GITHUB_OUTPUT"   # Use $GITHUB_OUTPUT instead of >> GITHUB_OUTPUT
         
         if [ "$TYPE" = "nginx" ]; then
-          wget --no-verbose "https://nginx.org/download/nginx-${VERSION}.tar.gz"
-          tar -xzf "nginx-${VERSION}.tar.gz"
-          BUILD_DIR="nginx-${VERSION}"
+          wget --no-verbose "https://nginx.org/download/${BUILD_DIR}.tar.gz"
+          tar -xzf "${BUILD_DIR}.tar.gz"
         else
-          wget --no-verbose "https://freenginx.org/download/freenginx-${VERSION}.tar.gz"
-          tar -xzf "freenginx-${VERSION}.tar.gz"
-          BUILD_DIR="freenginx-${VERSION}"
+          wget --no-verbose "https://freenginx.org/download/${BUILD_DIR}.tar.gz"
+          tar -xzf "${BUILD_DIR}.tar.gz"
         fi
-        echo "BUILD_DIR=$BUILD_DIR" >> $GITHUB_OUTPUT
+        
+        # Verify directory exists
+        if [ ! -d "$BUILD_DIR" ]; then
+          echo "Error: Build directory $BUILD_DIR not found after extraction"
+          ls -la
+          exit 1
+        fi
 
     - name: Build Module
       if: "!matrix.config.use_composite"
       shell: bash
       run: |
-        cd "${{ steps.download.outputs.BUILD_DIR }}"
+        echo "Current directory: $(pwd)"
+        ls -la
+        BUILD_DIR="${{ steps.download.outputs.BUILD_DIR }}"
+        echo "Using build directory: $BUILD_DIR"
+        cd "$BUILD_DIR" || exit 1
+        echo "Entered directory: $(pwd)"
+        ls -la
         ./configure --with-compat --add-dynamic-module=../
         make modules
         ls -l objs/*.so
