--- a/.github/workflows/codiumai.yml
+++ b/.github/workflows/codiumai.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Comment `/review` to trigger CodiumAI
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PAT_GITHUB }}
           script: |
             github.rest.issues.createComment({
               owner: context.repo.owner,
