--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,15 @@ jobs:
     
     steps:
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install requests beautifulsoup4 lxml
 
     - name: Create version checker script
       run: |
@@ -119,7 +120,7 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install test dependencies
       run: |
@@ -147,7 +148,7 @@ jobs:
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install test dependencies
       run: |
@@ -247,7 +248,7 @@ jobs:
     container: ${{ !matrix.config.use_composite && matrix.config.container || '' }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Get version from check-versions
       id: get-version
@@ -421,7 +422,7 @@ jobs:
       contents: read
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install build dependencies
       run: |
@@ -442,12 +443,13 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: cpp
+        queries: security-and-quality
 
     - name: Build with configure
       run: |
         BUILD_DIR="nginx-${NGINX_VERSION}"
         cd $BUILD_DIR
-        ./configure --with-compat --add-dynamic-module=../
+        ./configure --with-compat --add-dynamic-module=../ --with-cc-opt="-g -O2 -fstack-protector-strong"
         make modules
 
     - name: Perform CodeQL Analysis
@@ -458,7 +460,7 @@ jobs:
   documentation:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Check Documentation
       run: |
